# jepa-adapter-merging

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  PREREG.md  README.md  pyproject.toml
configs/: grid.yaml
paper/: main.tex  refs.bib
pbs/: orchestrator.py
results/merges/dinov2_l/: eurosat-resisc45_c0_s0_dare_ties.json  eurosat-resisc45_c0_s0_rd_encoder.json  eurosat-resisc45_c0_s0_task_arithmetic.json  (+7 more)
results/metrics/: geom_dinov2_l_dtd.json  geom_dinov2_l_eurosat.json  geom_dinov2_l_in100.json  geom_dinov2_l_mnist.json  geom_dinov2_l_resisc45.json  geom_lejepa_pilot_lam0.1_dtd.json  geom_lejepa_pilot_lam0.1_eurosat.json  geom_lejepa_pilot_lam0.1_in100.json  geom_lejepa_pilot_lam0.1_mnist.json  geom_lejepa_pilot_lam0.1_resisc45.json  geom_lejepa_pilot_lam1.0_dtd.json  geom_lejepa_pilot_lam1.0_eurosat.json  geom_lejepa_pilot_lam1.0_in100.json  geom_lejepa_pilot_lam1.0_mnist.json  geom_lejepa_pilot_lam1.0_resisc45.json  geom_mae_l_dtd.json  geom_mae_l_eurosat.json  geom_mae_l_in100.json  geom_mae_l_mnist.json  geom_mae_l_resisc45.json  geom_toy_toy0.json  geom_vjepa2_l_dtd.json  geom_vjepa2_l_eurosat.json  geom_vjepa2_l_in100.json  geom_vjepa2_l_mnist.json  geom_vjepa2_l_resisc45.json  week1_verify.json
scripts/: _common.py  analyze_pivot.py  download_assets.py  finetune_lora.py  fit_whitening.py  geometry_profile.py  make_figures.py  make_manifest.py  merge_eval.py  preprint_report.py  pretrain_lejepa.py  verify_gpu.py
src/isomerge/: __init__.py
tests/: run_all.py  test_e2e_toy.py  test_lora_mergers.py  test_metrics.py  test_sigreg.py
(+93 files in other folders)
